# opencode-web-service

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-cli-binaries.yml  ci-pre-publish.yml  ci.yml  docker-publish.yml  dockerfile-updates.yml  publish-cloudformation.yml  publish-npm.yml  publish.yml  version-bump.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/resolved/: remote-docker-build-parse-error.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-docker-integration/: 02-01-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-service-lifecycle-commands/: 03-02-PLAN.md
.planning/phases/04-platform-service-installation/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-interactive-setup-wizard/: 05-CONTEXT.md
.planning/phases/06-security-and-authentication/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-RESEARCH.md  06-UAT.md  06-VERIFICATION.md
.planning/phases/07-update-and-maintenance/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-UAT.md  07-VERIFICATION.md
.planning/phases/08-polish-and-documentation/: 08-01-PLAN.md  08-01-VERIFICATION.md
.planning/phases/09-dockerfile-version-pinning/: 09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-UAT.md  09-VERIFICATION.md
.planning/phases/10-remote-administration-via-cockpit/: 10-01-PLAN.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-remote-host-management/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-03-PLAN.md  11-03-SUMMARY.md  11-CONTEXT.md
.planning/phases/12-web-desktop-ui-investigation/: 12-CONTEXT.md
.planning/phases/14-versioning-and-release-automation/: 14-01-PLAN.md  14-02-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md
.planning/uat/: phase-14-versioning.md
docs/deploy/: aws.md
schemas/: config.example.jsonc  config.schema.json
scripts/: release-manual.sh  release.sh
(+34 files in other folders)
