[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/cli-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/pRizz/opencode-cloud"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.29", features = ["serde"] }
directories = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.16"
napi = { version = "2", features = ["tokio_rt", "napi9"] }
napi-derive = "2"
