[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/cli-rust",
]

[workspace.package]
version = "3.0.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/pRizz/opencode-cloud"
homepage = "https://github.com/pRizz/opencode-cloud"
documentation = "https://docs.rs/opencode-cloud"
keywords = ["opencode", "ai", "cloud", "docker", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
opencode-cloud-core = { version = "3.0.2", path = "packages/core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.29", features = ["serde"] }
directories = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.16"
napi = { version = "2", features = ["tokio_rt", "napi9"] }
napi-derive = "2"
tempfile = "3"

# Docker integration
bollard = { version = "0.18", features = ["chrono", "buildkit"] }
futures-util = "0.3"
tar = "0.4"
flate2 = "1.0"
tokio-retry = "0.3"
indicatif = { version = "0.17", features = ["tokio", "futures"] }
http-body-util = "0.1"
bytes = "1.9"

# CLI utilities
webbrowser = "1.0"
humantime = "2.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Platform service management
plist = "1.8"
dialoguer = "0.11"

# CLI output formatting
comfy-table = "7"

# Random generation
rand = "0.9"
